--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
       <h2 class="text-4xl md:text-5xl font-bold text-white drop-shadow-lg">探索你的黃金聖衣傳說</h2>
     </div>
   </section>
+  
+  <!-- 黃金聖衣集結區塊 -->
+<section class="relative h-[60vh] w-full bg-cover bg-center" style="background-image: url('assets/images/gold-saints-epic.jpg');">
+  <div class="absolute inset-0 bg-black bg-opacity-50 flex flex-col items-center justify-center">
+    <h2 class="text-4xl md:text-5xl font-bold text-yellow-300 drop-shadow-lg">
+      黃金聖衣·集結
+    </h2>
+    <p class="mt-4 text-lg text-gray-200">
+      群星閃耀，守護雅典娜的傳奇鬥士
+    </p>
+  </div>
+</section>
+
 
   <!-- 快速連結 -->
   <section class="py-10 bg-gray-900">
