--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   </style>
 </head>
 <body class="font-sans">
+  
+  <div class="text-red-500">這段文字會變紅</div>
+
   <!-- 導覽列 -->
   <header class="bg-black bg-opacity-80 sticky top-0 z-50">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
