插入一段測試碼

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
     </p>
   </div>
 </section>
+  
+<section class="relative h-[60vh] bg-cover bg-center" 
+  style="background-image: url('https://via.placeholder.com/1200x600.png?text=Banner');">
 
 
   <!-- 快速連結 -->
