--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 <section class="relative h-[60vh] bg-cover bg-center" 
   style="background-image: url('https://via.placeholder.com/1200x600.png?text=Banner');">
 
+  <div style="background-image: url('https://via.placeholder.com/1200x600.png?text=Banner'); height: 300px; background-size: cover; background-position: center;"></div>
+
+
 
   <!-- 快速連結 -->
   <section class="py-10 bg-gray-900">
