--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>聖衣神話 | Saint Cloth Myth</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link
+    href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+    rel="stylesheet"
+  />
   <style>
     body {
       background: linear-gradient(to bottom, #000000, #1a1a2e);
@@ -13,9 +16,6 @@
   </style>
 </head>
 <body class="font-sans">
-  
-  <div class="text-red-500">這段文字會變紅</div>
-
   <!-- 導覽列 -->
   <header class="bg-black bg-opacity-80 sticky top-0 z-50">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
@@ -31,53 +31,108 @@
   </header>
 
   <!-- 橫幅區 -->
-  <section class="relative h-[60vh] bg-cover bg-center" style="background-image: url('assets/images/banner.jpg');">
-    <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center">
-      <h2 class="text-4xl md:text-5xl font-bold text-white drop-shadow-lg">探索你的黃金聖衣傳說</h2>
+  <section
+    style="
+      background-image: url('assets/images/banner.jpg');
+      height: 300px;
+      background-size: cover;
+      background-position: center;
+      position: relative;
+    "
+  >
+    <div
+      style="
+        position: absolute;
+        inset: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      "
+    >
+      <h2
+        style="
+          color: white;
+          font-size: 2.5rem;
+          font-weight: bold;
+          text-shadow: 0 0 10px black;
+        "
+      >
+        探索你的黃金聖衣傳說
+      </h2>
     </div>
   </section>
-  
+
   <!-- 黃金聖衣集結區塊 -->
-<section class="relative h-[60vh] w-full bg-cover bg-center" style="background-image: url('assets/images/gold-saints-epic.jpg');">
-  <div class="absolute inset-0 bg-black bg-opacity-50 flex flex-col items-center justify-center">
-    <h2 class="text-4xl md:text-5xl font-bold text-yellow-300 drop-shadow-lg">
-      黃金聖衣·集結
-    </h2>
-    <p class="mt-4 text-lg text-gray-200">
-      群星閃耀，守護雅典娜的傳奇鬥士
-    </p>
-  </div>
-</section>
-  
-<section class="relative h-[60vh] bg-cover bg-center" 
-  style="background-image: url('https://via.placeholder.com/1200x600.png?text=Banner');">
-
-  <div style="background-image: url('https://via.placeholder.com/1200x600.png?text=Banner'); height: 300px; background-size: cover; background-position: center;"></div>
-
-
+  <section
+    style="
+      background-image: url('assets/images/gold-saints-epic.jpg');
+      height: 300px;
+      background-size: cover;
+      background-position: center;
+      position: relative;
+      color: #fbbf24;
+    "
+  >
+    <div
+      style="
+        position: absolute;
+        inset: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+      "
+    >
+      <h2
+        style="
+          font-size: 2.5rem;
+          font-weight: bold;
+          text-shadow: 0 0 10px black;
+        "
+      >
+        黃金聖衣·集結
+      </h2>
+      <p style="margin-top: 1rem; font-size: 1.125rem; color: #e5e7eb;">
+        群星閃耀，守護雅典娜的傳奇鬥士
+      </p>
+    </div>
+  </section>
 
   <!-- 快速連結 -->
   <section class="py-10 bg-gray-900">
-    <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-6 text-center">
-      <div class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition">
+    <div
+      class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-6 text-center"
+    >
+      <div
+        class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition"
+      >
         <a href="#series">
           <h3 class="text-xl font-semibold">系列介紹</h3>
           <p class="text-sm mt-2">完整聖衣分類與介紹</p>
         </a>
       </div>
-      <div class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition">
+      <div
+        class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition"
+      >
         <a href="#gallery">
           <h3 class="text-xl font-semibold">收藏展示</h3>
           <p class="text-sm mt-2">粉絲收藏與擺拍分享</p>
         </a>
       </div>
-      <div class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition">
+      <div
+        class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition"
+      >
         <a href="#buy">
           <h3 class="text-xl font-semibold">購買指南</h3>
           <p class="text-sm mt-2">入門建議與真偽辨別</p>
         </a>
       </div>
-      <div class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition">
+      <div
+        class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition"
+      >
         <a href="#news">
           <h3 class="text-xl font-semibold">最新消息</h3>
           <p class="text-sm mt-2">發售情報與展覽活動</p>
@@ -92,3 +147,4 @@
   </footer>
 </body>
 </html>
+
