--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>聖衣神話 | Saint Cloth Myth</title>
-  <link
-    href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
-    rel="stylesheet"
-  />
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <style>
     body {
       background: linear-gradient(to bottom, #000000, #1a1a2e);
@@ -16,6 +13,7 @@
   </style>
 </head>
 <body class="font-sans">
+
   <!-- 導覽列 -->
   <header class="bg-black bg-opacity-80 sticky top-0 z-50">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
@@ -33,8 +31,8 @@
   <!-- 橫幅區 -->
   <section
     style="
-      background-image: url('assets/images/banner.jpg');
-      height: 300px;
+      background-image: url('https://white2book.github.io/saint-cloth-myth/assets/images/banner.jpg');
+      height: 60vh;
       background-size: cover;
       background-position: center;
       position: relative;
@@ -51,12 +49,7 @@
       "
     >
       <h2
-        style="
-          color: white;
-          font-size: 2.5rem;
-          font-weight: bold;
-          text-shadow: 0 0 10px black;
-        "
+        class="text-4xl md:text-5xl font-bold text-white drop-shadow-lg"
       >
         探索你的黃金聖衣傳說
       </h2>
@@ -66,8 +59,8 @@
   <!-- 黃金聖衣集結區塊 -->
   <section
     style="
-      background-image: url('assets/images/gold-saints-epic.jpg');
-      height: 300px;
+      background-image: url('https://white2book.github.io/saint-cloth-myth/assets/images/gold-saints-epic.jpg');
+      height: 60vh;
       background-size: cover;
       background-position: center;
       position: relative;
@@ -86,16 +79,10 @@
         text-align: center;
       "
     >
-      <h2
-        style="
-          font-size: 2.5rem;
-          font-weight: bold;
-          text-shadow: 0 0 10px black;
-        "
-      >
+      <h2 class="text-4xl md:text-5xl font-bold text-yellow-300 drop-shadow-lg">
         黃金聖衣·集結
       </h2>
-      <p style="margin-top: 1rem; font-size: 1.125rem; color: #e5e7eb;">
+      <p class="mt-4 text-lg text-gray-200">
         群星閃耀，守護雅典娜的傳奇鬥士
       </p>
     </div>
@@ -103,36 +90,26 @@
 
   <!-- 快速連結 -->
   <section class="py-10 bg-gray-900">
-    <div
-      class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-6 text-center"
-    >
-      <div
-        class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition"
-      >
+    <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-6 text-center">
+      <div class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition">
         <a href="#series">
           <h3 class="text-xl font-semibold">系列介紹</h3>
           <p class="text-sm mt-2">完整聖衣分類與介紹</p>
         </a>
       </div>
-      <div
-        class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition"
-      >
+      <div class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition">
         <a href="#gallery">
           <h3 class="text-xl font-semibold">收藏展示</h3>
           <p class="text-sm mt-2">粉絲收藏與擺拍分享</p>
         </a>
       </div>
-      <div
-        class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition"
-      >
+      <div class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition">
         <a href="#buy">
           <h3 class="text-xl font-semibold">購買指南</h3>
           <p class="text-sm mt-2">入門建議與真偽辨別</p>
         </a>
       </div>
-      <div
-        class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition"
-      >
+      <div class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition">
         <a href="#news">
           <h3 class="text-xl font-semibold">最新消息</h3>
           <p class="text-sm mt-2">發售情報與展覽活動</p>
@@ -145,6 +122,6 @@
   <footer class="bg-black text-center py-6 text-sm text-gray-400">
     <p>&copy; 2025 聖衣神話站點 | 非官方粉絲網站</p>
   </footer>
+
 </body>
 </html>
-
