修改gallery_firebase_upload.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h1 class="text-2xl font-bold text-yellow-400">聖衣神話</h1>
       <nav class="space-x-4 text-sm">
         <a href="#series" class="hover:text-yellow-400">系列介紹</a>
-        <a href="#gallery" class="hover:text-yellow-400">收藏展示</a>
+        <a href="gallery_firebase_upload.html" class="hover:text-yellow-400">收藏展示</a>
         <a href="#buy" class="hover:text-yellow-400">購買指南</a>
         <a href="#news" class="hover:text-yellow-400">最新消息</a>
         <a href="#about" class="hover:text-yellow-400">關於本站</a>
@@ -98,7 +98,7 @@
         </a>
       </div>
       <div class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition">
-        <a href="#gallery">
+        <a href="gallery_firebase_upload.html">
           <h3 class="text-xl font-semibold">收藏展示</h3>
           <p class="text-sm mt-2">粉絲收藏與擺拍分享</p>
         </a>
