改回ssphoto-9cec3.firebasestorage.app
// For Firebase JS SDK v7.20.0 and later, measurementId is optional
const firebaseConfig = {
  apiKey: "AIzaSyBRbwCaJYXMeaBc6De0nd60vFsn1FUZueo",
  authDomain: "ssphoto-9cec3.firebaseapp.com",
  projectId: "ssphoto-9cec3",
  storageBucket: "ssphoto-9cec3.firebasestorage.app",
  messagingSenderId: "238707254649",
  appId: "1:238707254649:web:fd8aa0df2fd0d121b7bba8",
  measurementId: "G-L0K5QHKLE8"
};

--- a/gallery_firebase_upload.html
+++ b/gallery_firebase_upload.html
@@ -52,12 +52,12 @@
   </section>
 
   <script>
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
   apiKey: "AIzaSyBRbwCaJYXMeaBc6De0nd60vFsn1FUZueo",
   authDomain: "ssphoto-9cec3.firebaseapp.com",
   projectId: "ssphoto-9cec3",
-  storageBucket: "ssphoto-9cec3.appspot.com",
+  storageBucket: "ssphoto-9cec3.firebasestorage.app",
   messagingSenderId: "238707254649",
   appId: "1:238707254649:web:fd8aa0df2fd0d121b7bba8",
   measurementId: "G-L0K5QHKLE8"
