--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-2xl font-bold text-yellow-400">聖衣神話</h1>
       <nav class="space-x-4 text-sm">
-        <a href="#series" class="hover:text-yellow-400">系列介紹</a>
+        <a href="series.html" class="hover:text-yellow-400">系列介紹</a>
         <a href="gallery_firebase_upload.html" class="hover:text-yellow-400">收藏展示</a>
         <a href="#buy" class="hover:text-yellow-400">購買指南</a>
         <a href="#news" class="hover:text-yellow-400">最新消息</a>
@@ -92,8 +92,10 @@
   <section class="py-10 bg-gray-900">
     <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-6 text-center">
       <div class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition">
-        <a href="#series">
-          <h3 class="text-xl font-semibold">系列介紹</h3>
+        <a href="series.html">
+  <h3 class="text-xl font-semibold hover:text-yellow-300 transition">系列介紹</h3>
+        </a>
+
           <p class="text-sm mt-2">完整聖衣分類與介紹</p>
         </a>
       </div>
