--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="gallery_firebase_upload.html" class="hover:text-yellow-400">收藏展示</a>
         <a href="#buy" class="hover:text-yellow-400">購買指南</a>
         <a href="#news" class="hover:text-yellow-400">最新消息</a>
-        <a href="#about" class="hover:text-yellow-400">關於本站</a>
+        <a href="about.html" class="hover:text-yellow-400">關於本站</a>
       </nav>
     </div>
   </header>
