--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <h2
         class="text-4xl md:text-5xl font-bold text-white drop-shadow-lg"
       >
-        探索你的黃金聖衣傳說
+        探索你的聖衣傳說
       </h2>
     </div>
   </section>
