--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="space-x-4 text-sm">
         <a href="series.html" class="hover:text-yellow-400">系列介紹</a>
         <a href="gallery_firebase_upload.html" class="hover:text-yellow-400">收藏展示</a>
-        <a href="#buy" class="hover:text-yellow-400">購買指南</a>
+        <a href="buy.html" class="hover:text-yellow-400">購買指南</a>
         <a href="#news" class="hover:text-yellow-400">最新消息</a>
         <a href="about.html" class="hover:text-yellow-400">關於本站</a>
       </nav>
@@ -106,7 +106,7 @@
         </a>
       </div>
       <div class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition">
-        <a href="#buy">
+        <a href="buy.html">
           <h3 class="text-xl font-semibold">購買指南</h3>
           <p class="text-sm mt-2">入門建議與真偽辨別</p>
         </a>
