--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="series.html" class="hover:text-yellow-400">系列介紹</a>
         <a href="gallery_firebase_upload.html" class="hover:text-yellow-400">收藏展示</a>
         <a href="buy.html" class="hover:text-yellow-400">購買指南</a>
-        <a href="#news" class="hover:text-yellow-400">最新消息</a>
+        <a href="news.html" class="hover:text-yellow-400">最新消息</a>
         <a href="about.html" class="hover:text-yellow-400">關於本站</a>
       </nav>
     </div>
@@ -112,7 +112,7 @@
         </a>
       </div>
       <div class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition">
-        <a href="#news">
+        <a href="news.html">
           <h3 class="text-xl font-semibold">最新消息</h3>
           <p class="text-sm mt-2">發售情報與展覽活動</p>
         </a>
