--- a/news.html
+++ b/news.html
@@ -28,12 +28,12 @@
   <main class="max-w-4xl mx-auto px-6 py-12 space-y-8 text-gray-300">
     <article class="bg-gray-800 p-6 rounded-xl shadow-md">
       <time class="text-sm text-yellow-400">2025-06-20</time>
-      <h3 class="text-xl font-bold text-yellow-300 mt-1">EX 水瓶座 卡妙 預購開始</h3>
+      <h3 class="text-xl font-bold text-yellow-300 mt-1">EX 水瓶座 卡妙 預購開始(偽)</h3>
       <p class="mt-2">全新造型、可動性再進化，預計 10 月正式發售，搭配冰霜特效件，還原曙光女神之審判場景！</p>
     </article>
     <article class="bg-gray-800 p-6 rounded-xl shadow-md">
       <time class="text-sm text-yellow-400">2025-06-15</time>
-      <h3 class="text-xl font-bold text-yellow-300 mt-1">冥王哈帝斯 聖衣皇級發表</h3>
+      <h3 class="text-xl font-bold text-yellow-300 mt-1">冥王哈帝斯 聖衣皇級發表(偽)</h3>
       <p class="mt-2">冥界之王首次以皇級登場，重裝甲 + 金屬光澤重現原作威壓感，預計年底預購。</p>
     </article>
     <article class="bg-gray-800 p-6 rounded-xl shadow-md">
