--- a/about.html
+++ b/about.html
@@ -12,6 +12,8 @@
     <div class="space-x-4">
       <a href="index.html" class="hover:text-yellow-300">首頁</a>
       <a href="series.html" class="hover:text-yellow-300">系列介紹</a>
+      <a href="buy.html" class="hover:text-yellow-300">購買指南</a>
+      <a href="news.html" class="text-yellow-300 font-semibold">最新消息</a>
       <a href="about.html" class="text-yellow-300 font-semibold">關於本站</a>
     </div>
   </nav>
