Update gallery link to point to gallery.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h1 class="text-2xl font-bold text-yellow-400">聖衣神話</h1>
       <nav class="space-x-4 text-sm">
         <a href="series.html" class="hover:text-yellow-400">系列介紹</a>
-        <a href="gallery_firebase_upload.html" class="hover:text-yellow-400">收藏展示</a>
+        <a href="gallery.html" class="hover:text-yellow-400">收藏展示</a>
         <a href="buy.html" class="hover:text-yellow-400">購買指南</a>
         <a href="news.html" class="hover:text-yellow-400">最新消息</a>
         <a href="about.html" class="hover:text-yellow-400">關於本站</a>
