Update link to gallery.html in index.html

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </a>
       </div>
       <div class="p-4 bg-gray-800 rounded-lg hover:bg-yellow-400 hover:text-black transition">
-        <a href="gallery_firebase_upload.html">
+        <a href="gallery.html">
           <h3 class="text-xl font-semibold">收藏展示</h3>
           <p class="text-sm mt-2">粉絲收藏與擺拍分享</p>
         </a>
